# buhovets-com

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  tests.py
blog/: views.py
buhovetscom/: asgi.py  settings.py  urls.py  wsgi.py
