[tool.poetry]
name = "buhovetscom"
version = "0.1.0"
description = ""
authors = ["buhovets <x10c@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
python-dotenv = "^0.21.0"
mysqlclient = "^2.1.1"
selenium = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
